--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,51 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <archive>
+                        <index>
+                            true
+                        </index>
+                        <manifest>
+                            <addClasspath>
+                                true
+                            </addClasspath>
+                            <mainClass>
+                                com.example.Main
+                            </mainClass>
+                        </manifest>
+                        <manifestEntries>
+                            <mode>
+                                development
+                            </mode>
+                            <key>
+                                value
+                            </key>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+        <finalName>
+            testcalc
+        </finalName>
+    </build>
 </project>
